--- a/imc.html
+++ b/imc.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style type="text/css" media="all">
-		@import url("css/stilo07.css");
+		@import url("css/stiloimc.css");
 </style>
-<script type="text/javascript" src="js/js07.js"></script>
+<script type="text/javascript" src="js/imc.js"></script>
 
 </head>
 
