--- a/imc.html
+++ b/imc.html
@@ -38,7 +38,7 @@
 			<label for="imc">IMC:</label>
 			<input type="text" name="imc" disabled="disabled" />
 			
-			<a href="#" onclick="calcularIMC();">Calcular</a>
+			<button type="button" onclick="calcularIMC();">Calcular</button>
 		</fieldset>
 	</form>
 	
