--- a/imc.html
+++ b/imc.html
@@ -38,6 +38,9 @@
 			<label for="imc">IMC:</label>
 			<input type="text" name="imc" disabled="disabled" />
 			
+			<label for="resultado">Resultado:</label>
+			<input type="text" name="resultado" disabled="disabled" />
+			
 			<button type="button" onclick="calcularIMC();">Calcular</button>
 		</fieldset>
 	</form>
