--- a/imc.html
+++ b/imc.html
@@ -26,19 +26,16 @@
 		<fieldset>
 			<legend>Cálculo do IMC</legend>
 			
-			<label for="kilos">Kilos:</label>
+			<label for="kilos">Peso(kg):</label>
 			<input type="text" name="kilos" />
 			
-			<label for="metros">Metros:</label>
+			<label for="metros">Altura(m):</label>
 			<input type="text" name="metros" />
-			
-			<label for="centimetros">Cm:</label>
-			<input type="text" name="centimetros" />
-			
+				
 			<label for="imc">IMC:</label>
 			<input type="text" name="imc" disabled="disabled" />
 			
-			<label for="resultado">Resultado:</label>
+			<label for="resultado">Resultado do IMC:</label>
 			<input type="text" name="resultado" disabled="disabled" />
 			
 			<button type="button" onclick="calcularIMC();">Calcular</button>
