--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 ﻿<!DOCTYPE html>
 <html lang="pt-br">
-<head>
-<title>java script</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style type="text/css" media="all">
-		@import url("css/stilo07.css");
-</style>
-<script type="text/javascript" src="js/js07.js"></script>
+<head>
+  <title>java script</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
 
-<header>
-  <h2>Cities</h2>
-</header>
+  <header>
+    <h2>Cities</h2>
+  </header>
 
-<section>
-  <nav>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="" id="tokyo" onclick="ligar();" >Tokyo</a></li>
-    </ul>
-  </nav>
-  
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
-</section>
+  <section>
+    <nav>
+      <ul>
+        <li><a href="#">London</a></li>
+        <li><a href="#">Paris</a></li>
+        <li><a href="" id="tokyo">Tokyo</a></li>
+      </ul>
+    </nav>
 
-<footer>
-  <p>Footer</p>
-</footer>
+    <article>
+      <h1>London</h1>
+      <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan
+        area of over 13 million inhabitants.</p>
+      <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to
+        its founding by the Romans, who named it Londinium.</p>
+    </article>
+  </section>
+
+  <footer>
+    <p>Footer</p>
+  </footer>
 
 </body>
+
 </html>
