--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <title>java script</title>
+  <title>Site Pessoal do Github</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,24 +11,19 @@
 <body>
 
   <header>
-    <h2>Cities</h2>
+    <h2>Github Fernando Marca Magalhães</h2>
   </header>
 
   <section>
     <nav>
       <ul>
-        <li><a href="#">London</a></li>
-        <li><a href="#">Paris</a></li>
-        <li><a href="" id="tokyo">Tokyo</a></li>
+        <li><a href="#">Home</a></li>
       </ul>
     </nav>
 
     <article>
-      <h1>London</h1>
-      <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan
-        area of over 13 million inhabitants.</p>
-      <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to
-        its founding by the Romans, who named it Londinium.</p>
+      <h1>Home</h1>
+      <p>Em Construção...</p>
     </article>
   </section>
 
